# hse-weather-project

./: analysis.py  config.py  eda.ipynb  main.py  owm.py  plots.py  pyproject.toml  utils.py
benchmark/: cpubound.py
data/: temperature_data.csv
src/: analysis.py  main.py  plots.py
src/benchmark/: cpubound.py  iobound.py
